infrastructures/OCI/k8s/minio/minio-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console-https
  namespace: database
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: minio
          port: 9001
      middlewares:
        - name: google-auth
          namespace: traefik
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-api-https
  namespace: database
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: minio
          port: 9000
  tls:
    certResolver: letsencrypt
